--- a/sites/configurations/goodmoves/partials/email-frequency.hbs
+++ b/sites/configurations/goodmoves/partials/email-frequency.hbs
@@ -1,28 +1,32 @@
 {{#if @root.data.auth}}
-  {{#with @root.data.saved_searches.items.[0]}}
-    <div class="mdc-form-field">
-      <div class="mdc-radio">
-        <input class="mdc-radio__native-control" type="radio" id="daily" name="frequency" {{#compare days "1234567"}}checked{{/compare}}>
-        <div class="mdc-radio__background">
-          <div class="mdc-radio__outer-circle"></div>
-          <div class="mdc-radio__inner-circle"></div>
+  {{#if (length (filter @root.data.saved_searches.items "subscribed" "===" 1))}}
+    {{#with @root.data.saved_searches.items.[0]}}
+      <div class="mdc-form-field">
+        <div class="mdc-radio">
+          <input class="mdc-radio__native-control" type="radio" id="daily" name="frequency" {{#compare days "1234567"}}checked{{/compare}}>
+          <div class="mdc-radio__background">
+            <div class="mdc-radio__outer-circle"></div>
+            <div class="mdc-radio__inner-circle"></div>
+          </div>
         </div>
+        <label for="daily">Daily</label>
       </div>
-      <label for="daily">Daily</label>
-    </div>
-    <div class="mdc-form-field">
-      <div class="mdc-radio">
-        <input class="mdc-radio__native-control" type="radio" id="weekly" name="frequency" {{#compare (length days) 1}}checked{{/compare}}>
-        <div class="mdc-radio__background">
-          <div class="mdc-radio__outer-circle"></div>
-          <div class="mdc-radio__inner-circle"></div>
+      <div class="mdc-form-field">
+        <div class="mdc-radio">
+          <input class="mdc-radio__native-control" type="radio" id="weekly" name="frequency" {{#compare (length days) 1}}checked{{/compare}}>
+          <div class="mdc-radio__background">
+            <div class="mdc-radio__outer-circle"></div>
+            <div class="mdc-radio__inner-circle"></div>
+          </div>
         </div>
+        <label for="weekly">Weekly</label>
       </div>
-      <label for="weekly">Weekly</label>
-    </div>
+    {{else}}
+      You have no saved searches.
+    {{/with}}
   {{else}}
-    You have no saved searches.
-  {{/with}}
+    You are not subscribed to any saved searches.
+  {{/if}}
 {{/if}}
 
 <script>
