--- a/sites/configurations/goodmoves/templates/account/sign-in.hbs
+++ b/sites/configurations/goodmoves/templates/account/sign-in.hbs
@@ -1,4 +1,4 @@
-{{#if data.auth ~}}
+{{#ifAll @root.data.auth (compare @root.request.params.query.reauth "!==" "true") ~}}
 {{> sign_out_loader}}
 <script>
   document.addEventListener("DOMContentLoaded", function(event) {
@@ -12,8 +12,17 @@
   <div class="mdc-card mdc-elevation--z0">
     <div class="mdc-card__info--vacancy">
       <div class="mdc-card__info--vacancy-title mdc-typography--headline4 x-padding">
-        Sign in
+        {{#if @root.request.params.query.reauth}}
+          Reauthenticate
+        {{else}}
+          Sign in
+        {{/if}}
       </div>
+      {{#if @root.request.params.query.reauth}}
+        <div class="mdc-card__info--vacancy-title mdc-typography--headline5 x-padding">
+          Before you can do that you must sign in again
+        </div>
+      {{/if}} 
     </div>
     <div class="mdc-card__info x-padding-full mdc-theme--primary-bg mdc-theme--on-primary" id="sign-in-message">
       <span id="form-message"></span>
@@ -92,4 +101,4 @@ document.addEventListener("DOMContentLoaded", function(event) {
   });
 });
 </script>
-{{/if ~}}
+{{/ifAll ~}}
