Implemented search filters

--- a/sites/configurations/goodmoves/partials/currently-recruiting.hbs
+++ b/sites/configurations/goodmoves/partials/currently-recruiting.hbs
@@ -1,3 +1,4 @@
+{{#compare @root.data.supplimentaryResponses.currently_recruiting.hits.total ">" 0 ~}}
 <section class="currently-recruiting mdc-elevation--z3">
   <div class="mdc-typography--headline5 v-margin-full">
     Currently recruiting&ensp;
@@ -17,3 +18,4 @@
     </div>
   </div>
 </section>
+{{/compare ~}}
