--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1197,6 +1197,9 @@ a {
         margin: 0;
       }
     }
+    .save-button-block {
+      margin: 0 $unit $unit;
+    }
   }
 }
 .goodmoves-event .mdc-card.full,
@@ -1653,6 +1656,11 @@ body {
   }
   .mdc-floating-label {
     transform: translateY(-50%) scale(0.75);
+  }
+  .search-distance {
+    font-variant: all-small-caps;
+    font-weight: 600;
+    color: rgba(0, 0, 0, 0.7);
   }
 }
 .gm-style .gm-style-iw {
