--- a/sites/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/full.hbs
@@ -194,8 +194,11 @@
                 Your notes
               </label>
             </div>
-            <div class="text-right">
-              <button type="button" class="mdc-button mdc-button--raised" data-user-notes="{{Id}}">Save notes</button>
+            <div class="save-button-block">
+              <button type="button" class="mdc-button mdc-button--raised" data-user-notes="{{Id}}">
+                <span class="far fa-save mdc-list-item__graphic" aria-hidden="true"></span>
+                Save notes
+              </button>
             </div>
           {{else}}
             <div class="detailed-info">
