--- a/sites/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/full.hbs
@@ -178,10 +178,11 @@
               </marker>
             {{/each ~}}
           {{else}}
-            <h4 class="mdc-typography--headline6">Location</h4>
-            <p class="mdc-typography--body1">
-              {{{location}}}
-            </p>
+            <div class="container-content">
+              <p class="mdc-typography--body1">
+                {{{location}}}
+              </p>
+            </div>
           {{/compare ~}}
         </div>
       </div>
