More misc wee changes

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1513,6 +1513,7 @@ body {
   }
   .mdc-card__info--organisation,
   .mdc-card__info--vacancy {
+    box-sizing: border-box;
     width: 100%;
     flex-direction: column;
     padding: 0 $unit/2;
