--- a/sites/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/full.hbs
@@ -178,9 +178,9 @@
               </marker>
             {{/each ~}}
           {{else}}
-            <div class="container-content">
+            <div class="container-content v-margin-full">
               <p class="mdc-typography--body1">
-                {{{location}}}
+                Area: {{{location}}}. Specific job location not provided.
               </p>
             </div>
           {{/compare ~}}
