Only show claimed Good HQ profile data

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -62,7 +62,7 @@ body {
 }
 .mdc-top-app-bar {
   background-color: white;
-  z-index: 3 !important;
+  z-index: 5 !important;
 }
 h1,
 h2,
@@ -1578,7 +1578,7 @@ body {
     max-width: 120px;
     height: auto;
     display: flex;
-    align-items: top;
+    align-items: flex-start;
     margin: $unit/2 0 0 $unit;
     padding: 0;
     img {
