--- a/sites/configurations/goodmoves/partials/vacancy/key-info.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/key-info.hbs
@@ -13,12 +13,12 @@
         <a href="/organisation/{{organisation.slug}}{{@root.request.url.search}}">{{organisation.name}}</a>
       </li>
     </ul>
-    <div class="mdc-layout-grid hide-md hide-lg">
+    <!-- <div class="mdc-layout-grid hide-md hide-lg">
       <p class="mdc-typography--body2 v-margin-full-bottom">
         {{#compare (trim location) "===" ""}}This is a {{lowercase role_status_list}} position{{else}}This {{lowercase role_status_list}} position is based in {{trim (replace location "Based in" "")}}{{/compare}}{{#compare salary "!==" "TBC"}}{{#compare (trim salary) "!==" "Unpaid"}}{{#compare (trim salary) "!==" "Sessional"}}, with a salary of {{{trim (lowercase salary)}}}{{/compare}}{{else}} and is unpaid{{/compare}}{{/compare}}. The closing date for applications is the {{{momentFormat (moment closing_date "x") "Do \o\f MMMM YYYY"}}}.
       </p>
-    </div>
-    <div class="mdc-layout-grid hide-sm">
+    </div> -->
+    <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
           <ul class="fa-ul first">
