--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1246,8 +1246,9 @@ hr {
   padding: $unit 0 $unit*2;
 }
 .mdc-drawer__content {
-  .regions {
-    margin-left: $unit;
+  padding: 0 $unit/2;
+  #search-tab-bar {
+    padding: 0 $unit/2;
   }
 }
 .mdc-drawer__content-padded {
@@ -1255,7 +1256,7 @@ hr {
 }
 .mdc-drawer__content-heading {
   margin: 0;
-  padding: $unit;
+  padding: $unit $unit/2;
   .mdc-icon-toggle {
     margin-top: -$unit*(3/4);
   }
