--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1249,6 +1249,7 @@ hr {
   padding: 0 $unit/2;
   #search-tab-bar {
     padding: 0 $unit/2;
+    box-sizing: border-box;
   }
 }
 .mdc-drawer__content-padded {
