--- a/sites/configurations/goodmoves/partials/shortlist-alerts.hbs
+++ b/sites/configurations/goodmoves/partials/shortlist-alerts.hbs
@@ -1,5 +1,5 @@
 {{#if @root.data.auth}}
-  {{#with @root.data.shortlist_ids.items.[0]}}
+  {{#with @root.data.shortlist.items.[0]}}
     {{#> ajax_chip
       onUrl="/toggle-shortlist-subscription"
       onMethod="POST"
