--- a/sites/configurations/goodmoves/partials/vacancy/search-result.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/search-result.hbs
@@ -4,11 +4,11 @@
   {{#if description_short ~}}
   <div class="search-result-article__snippet mdc-typography--body1">
     {{{description_short}}}
-    {{#if (getProperty @root.data.shortlist_notes Id)}}
+    {{#if (getProperty @root.data.notes Id)}}
       <hr />
       <div class="b-padding-full">
         <h3 class="mdc-typography--headline6">Your notes</h3>
-        {{{regexReplace (getProperty @root.data.shortlist_notes Id) "(\r\n)|(\r|\n)" "gi" "<br />"}}}
+        {{{regexReplace (getProperty @root.data.notes Id) "(\r\n)|(\r|\n)" "gi" "<br />"}}}
       </div>
     {{/if}}
   </div>
