--- a/sites/configurations/goodmoves/partials/email-days.hbs
+++ b/sites/configurations/goodmoves/partials/email-days.hbs
@@ -1,5 +1,5 @@
-{{#if @root.data.saved_searches.items.[0] ~}}
-  {{~#with @root.data.saved_searches.items.[0] ~}}
+{{#if @root.data.searches.items.[0] ~}}
+  {{~#with @root.data.searches.items.[0] ~}}
     {{~#each (split "sunday,monday,tuesday,wednesday,thursday,friday,saturday" ",")~}}
       {{~#if (contains ../days (add @index 1))~}}
         {{~ this ~}},
