--- a/sites/configurations/goodmoves/partials/email-frequency.hbs
+++ b/sites/configurations/goodmoves/partials/email-frequency.hbs
@@ -1,6 +1,6 @@
 {{#if @root.data.auth}}
-  {{#if (length (filter @root.data.saved_searches.items "subscribed" "===" 1))}}
-    {{#with @root.data.saved_searches.items.[0]}}
+  {{#if (length (filter @root.data.searches.items "subscribed" "===" 1))}}
+    {{#with @root.data.searches.items.[0]}}
       <div class="mdc-form-field">
         <div class="mdc-radio">
           <input class="mdc-radio__native-control" type="radio" id="daily" name="frequency" {{#compare days "1234567"}}checked{{/compare}}>
