--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -111,14 +111,14 @@
           <span class="fal fa-fw fa-angle-right scroll-icon"></span>
         </div>
         <div class="mdc-layout-grid__inner scrolling-grid">
-          {{#compare @root.data.supplimentaryResponses.shortlist_open.hits.total ">" 0}}
-          {{#each @root.data.supplimentaryResponses.shortlist_open.hits.hits ~}}
+          {{#compare @root.data.supplimentaryResponses.shortlist_vacancies_open.hits.total ">" 0}}
+          {{#each @root.data.supplimentaryResponses.shortlist_vacancies_open.hits.hits ~}}
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone shortlist-jobs">
             {{> vacancy_mini _source}}
           </div>
           {{/each ~}}
-          {{#compare @root.data.supplimentaryResponses.shortlist_closed.hits.total ">" 0}}
-          {{#each @root.data.supplimentaryResponses.shortlist_closed.hits.hits ~}}
+          {{#compare @root.data.supplimentaryResponses.shortlist_vacancies_closed.hits.total ">" 0}}
+          {{#each @root.data.supplimentaryResponses.shortlist_vacancies_closed.hits.hits ~}}
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone shortlist-jobs">
             {{> vacancy_mini _source}}
           </div>
@@ -131,7 +131,7 @@
           </div>
           {{else}}
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-            {{#compare @root.data.supplimentaryResponses.shortlist_closed.hits.total ">" 0}}
+            {{#compare @root.data.supplimentaryResponses.shortlist_vacancies_closed.hits.total ">" 0}}
             <p>
               There are currently no open jobs in your shortlist. <a href="/shortlist">See closed jobs</a>.
             </p>
