--- a/sites/configurations/goodmoves/templates/vacancies/shortlist.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/shortlist.hbs
@@ -1,5 +1,5 @@
 <div id="detailed-results-container" class="container-content goodmoves-shortlist">
-  {{#compare @root.data.shortlist.open.hits.total ">" 0}}
+  {{#compare @root.data.shortlist_vacancies.open.hits.total ">" 0}}
   <div class="t-margin-full pull-right">
     <div class="t-margin">
       {{> shortlist_alerts}}
@@ -10,8 +10,8 @@
     Shortlist
   </h1>
 
-  {{#compare @root.data.shortlist.open.hits.total "===" 0}}
-  {{#compare @root.data.shortlist.closed.hits.total "===" 0}}
+  {{#compare @root.data.shortlist_vacancies.open.hits.total "===" 0}}
+  {{#compare @root.data.shortlist_vacancies.closed.hits.total "===" 0}}
   <p class="mdc-typography--body1">
     You don't yet have any jobs on your shortlist. To add a job, click the &ensp;<strong><span class="far fa-star mdc-chip__icon mdc-chip__icon--leading" aria-hidden="true"></span>Shortlist</strong>&ensp;button.
   </p>
@@ -22,24 +22,24 @@
   {{/compare}}
   {{/compare}}
 
-  {{#compare @root.data.shortlist.open.hits.total ">" 0}}
-  {{#each @root.data.shortlist.open.hits.hits ~}}
+  {{#compare @root.data.shortlist_vacancies.open.hits.total ">" 0}}
+  {{#each @root.data.shortlist_vacancies.open.hits.hits ~}}
   {{> vacancy_search_result _source}}
   {{/each ~}}
   <div class="foot">
-    {{> pagination paging=@root.data.shortlist.open.pagination}}
+    {{> pagination paging=@root.data.shortlist_vacancies.open.pagination}}
   </div>
   {{/compare}}
 
-  {{#compare @root.data.shortlist.closed.hits.total ">" 0}}
+  {{#compare @root.data.shortlist_vacancies.closed.hits.total ">" 0}}
   <h2 class="mdc-typography--headline5 v-margin-full">
     Closed jobs
   </h2>
-  {{#each @root.data.shortlist.closed.hits.hits ~}}
+  {{#each @root.data.shortlist_vacancies.closed.hits.hits ~}}
   {{> vacancy_search_result _source}}
   {{/each ~}}
   <div class="foot">
-    {{> pagination paging=@root.data.shortlist.closed.pagination}}
+    {{> pagination paging=@root.data.shortlist_vacancies.closed.pagination}}
   </div>
   {{/compare}}
 </div>
