Fixed broken notes function

--- a/sites/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/full.hbs
@@ -190,7 +190,7 @@
         <div class="text-field-container user-notes">
           {{#if @root.data.auth ~}}
             <div class="mdc-text-field text-field mdc-text-field--fullwidth mdc-text-field--dense mdc-text-field--textarea" data-mdc-auto-init="MDCTextField">
-              <textarea class="mdc-text-field__input" data-user-notes="{{Id}}" data-autosize="true">{{{getProperty @root.data.shortlist_notes Id}}}</textarea>
+              <textarea class="mdc-text-field__input" data-user-notes="{{Id}}" data-autosize="true">{{{getProperty @root.data.notes Id}}}</textarea>
               <label class="mdc-floating-label" for="user-notes">
                 Your notes
               </label>
