Region groupings in search form like on Browse

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1645,6 +1645,10 @@ body {
     margin-top: $unit*1.5;
     margin-left: $unit;
   }
+  .mdc-typography--headline7 {
+    margin: 0;
+    padding: 11px;
+  }
   .mdc-layout-grid__inner {
     grid-gap: $unit/2;
   }
